--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "array-remove-by-value": "^1.0.1",
-    "babel-core": "^6.4.0",
-    "babel-loader": "^6.2.1",
+    "babel-core": "^5.8.33",
+    "babel-loader": "^5.3.3",
     "body-parser": "^1.14.2",
     "cookie-parser": "^1.4.0",
     "css-loader": "^0.23.1",
@@ -26,6 +26,7 @@
     "react": "^0.14.6",
     "react-bootstrap": "^0.28.2",
     "react-dom": "^0.14.6",
+    "react-map-styles": "^0.3.0",
     "style-loader": "^0.13.0",
     "superagent": "^1.6.1",
     "underscore": "^1.8.3",
