--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.4.0",
     "css-loader": "^0.23.1",
     "express": "^4.13.3",
+    "express-session": "^1.13.0",
     "fs-extra": "^0.26.4",
     "json-loader": "^0.5.4",
     "jsx-loader": "^0.13.2",
